# ghostline

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/fuzz/: Cargo.toml
client/fuzz/fuzz_targets/: fuzz_target_1.rs
client/src/: app_data_encryption.rs  app_driven_storage.rs  encryption.rs  main.rs  message.rs  storage.rs  talk_to_server.rs  user_driven_settings.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: windows-kernel-performance-research.md
server/: Cargo.toml
server/src/: main.rs
