[package]
name = "ghostline-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argon2 = "0.5"
chacha20poly1305 = "0.10"
tokio.workspace = true
ghostline-core = { path = "../core" }
crypto_box = { version = "0.9.1", features = ["chacha20", "getrandom"] }
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0.150"
zeroize = "1.9.0"
toml = "1.1.3"
ratatui.workspace = true
crossterm.workspace = true


[target.'cfg(kani_ra)'.dependencies]
kani = { git = "https://github.com/model-checking/kani" }
